--- a/.github/workflows/build-on-centos7.yml
+++ b/.github/workflows/build-on-centos7.yml
@@ -15,24 +15,43 @@ jobs:
     - uses: actions/checkout@master
     - name: Docker login
       env:
-        USER_NAME: ${{ secrets.USER_NAME }}  
-        PASSWORD: ${{ secrets.PASSWORD }}
+        DOCKER_HUB_USERNAME: ${{ secrets. DOCKER_HUB_USERNAME }} 
+        DOCKER_HUB_PASSWORD: ${{ secrets. DOCKER_HUB_PASSWORD }}
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        
       run: |
-        echo $PASSWORD | docker login --username $USER_NAME --password-stdin
+        echo $DOCKER_HUB_PASSWORD | docker login --username $DOCKER_HUB_USERNAME --password-stdin
+        echo $GITHUB_TOKEN | docker login docker.pkg.github.com --username $GITHUB_ACTOR --password-stdin
 
     - name: Build & Push Docker Image
       run: |  
         cd centos7
+
         IMAGE_NAME=ringcentral/rcweb-builder
+        GH_DOCKER_PKG_IMAGE_NAME=docker.pkg.github.com/ringcentral-docker/rcweb-builder/rcweb-builder
+
         NODE_VERSION="node$(awk -F '[=.]' '/ARG NODE_VERSION/ {print $2}' Dockerfile)"
         RUBY_VERSION="ruby$(awk -F '[=]' '/ARG RUBY_VERSION/ {print $2}' Dockerfile)"
         CENTOS_VERSION="centos$(awk -F '[=]' '/ARG CENTOS_VERSION/ {print $2}' Dockerfile)"
+
         docker build --tag ${IMAGE_NAME} --file Dockerfile .
+
         docker tag "$IMAGE_NAME" "${IMAGE_NAME}:latest"
         docker tag "$IMAGE_NAME" "${IMAGE_NAME}:${NODE_VERSION}"
         docker tag "$IMAGE_NAME" "${IMAGE_NAME}:${NODE_VERSION}-${CENTOS_VERSION}"
         docker tag "$IMAGE_NAME" "${IMAGE_NAME}:${NODE_VERSION}-${RUBY_VERSION}-${CENTOS_VERSION}"
+        
         docker push "${IMAGE_NAME}:latest"
         docker push "${IMAGE_NAME}:${NODE_VERSION}"
         docker push "${IMAGE_NAME}:${NODE_VERSION}-${CENTOS_VERSION}"
         docker push "${IMAGE_NAME}:${NODE_VERSION}-${RUBY_VERSION}-${CENTOS_VERSION}"
+
+        docker tag "$IMAGE_NAME" "${GH_DOCKER_PKG_IMAGE_NAME}:latest"
+        docker tag "$IMAGE_NAME" "${GH_DOCKER_PKG_IMAGE_NAME}:${NODE_VERSION}"
+        docker tag "$IMAGE_NAME" "${GH_DOCKER_PKG_IMAGE_NAME}:${NODE_VERSION}-${CENTOS_VERSION}"
+        docker tag "$IMAGE_NAME" "${GH_DOCKER_PKG_IMAGE_NAME}:${NODE_VERSION}-${RUBY_VERSION}-${CENTOS_VERSION}"
+        
+        docker push "${GH_DOCKER_PKG_IMAGE_NAME}:latest"
+        docker push "${GH_DOCKER_PKG_IMAGE_NAME}:${NODE_VERSION}"
+        docker push "${GH_DOCKER_PKG_IMAGE_NAME}:${NODE_VERSION}-${CENTOS_VERSION}"
+        docker push "${GH_DOCKER_PKG_IMAGE_NAME}:${NODE_VERSION}-${RUBY_VERSION}-${CENTOS_VERSION}"
